# linkml_test2

./: .cruft.json  404.html  CONTRIBUTING.md  LICENSE  README.md  config.public.mk  index.html  mkdocs.yml  pyproject.toml  sitemap.xml
.github/workflows/: deploy-docs.yaml  main.yaml  test_pages_build.yaml
Boolean/: index.html
Curie/: index.html
Date/: index.html
DateOrDatetime/: index.html
Datetime/: index.html
Decimal/: index.html
Double/: index.html
Float/: index.html
Integer/: index.html
Jsonpath/: index.html
Jsonpointer/: index.html
NamedThing/: index.html
Ncname/: index.html
Nodeidentifier/: index.html
Objectidentifier/: index.html
Person/: index.html
PersonCollection/: index.html
PersonStatus/: index.html
Sparqlpath/: index.html
String/: index.html
Time/: index.html
Uri/: index.html
Uriorcurie/: index.html
about/: index.html
age_in_years/: index.html
birth_date/: index.html
description/: index.html
entries/: index.html
examples/: README.md
id/: index.html
name/: index.html
primary_email/: index.html
project/excel/: test2.xlsx
project/jsonld/: test2.context.jsonld  test2.jsonld
project/jsonschema/: test2.schema.json
project/owl/: test2.owl.ttl
project/prefixmap/: test2.yaml
project/shacl/: test2.shacl.ttl
project/shex/: test2.shex
search/: search_index.json
src/test2/datamodel/: __init__.py  test2.py
src/test2/schema/: test2.yaml
test2/: index.html
tests/: __init__.py  test_data.py
vital_status/: index.html
